Wed  Jan  5 2005	H. Wade Minter (minter@lunenburg.org)
     * Change some hardcoded paths into File::Spec calls to hopefully help things
       out on Win98.

Tue  Jan  4 2005	H. Wade Minter (minter@lunenburg.org)
     * Commit the framework for the Mac application bundle.

Mon  Jan  3 2005	H. Wade Minter (minter@lunenburg.org)
     * Make things much more MacOS X friendly.  Use the now-free Audion
       instead of XMMS under X11, and use Mac::AppleScript to send AppleScript
       commands to it.

Sun  Jan  2 2005	H. Wade Minter (minter@lunenburg.org)
     * Add password protection for Randy in KC.  You can now set a write
       access password in the Preferences that will cause any attempt to
       modify things (add/edit/delete songs and categories) to ask for that
       password before proceeding.

Sat  Jan  1 2005	H. Wade Minter (minter@lunenburg.org)
     * Make the mainbox a DropSite so that if you drop a file onto it,
       the add_song dialog comes up.  Should be handy for Windows users.
       Thanks to the.noonings on the PAR list for the code.

Mon  Nov 22 2004	H. Wade Minter (minter@lunenburg.org)
     * Fix the logfile routines so that a) logfiles actually work, and
       b) Windows users get logfiles all the time.
     * Clean up command line switches, add --help flag to show usage.
     * Start work on a --debug command line switch to dump tons of debugging
       information to STDOUT.

Wed  Nov 10 2004	H. Wade Minter (minter@lunenburg.org)
     * Deiconify/raise the mainwindow when doing fresh-install stuff, 
       otherwise the app will silently hang.
     * Released version 2.0.2

Sat  Oct  2  2004	H. Wade Minter (minter@lunenburg.org)
     * Nicer output from cpancheck.pl

Sat  Sep 25  2004	H. Wade Minter (minter@lunenburg.org)
     * Fixed a bug that prevented the holding tank from launching playlists.
     * Released Version 2.0.1 with this bugfix.

Fri  Sep 24  2004	H. Wade Minter (minter@lunenburg.org)